--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "express-async-handler": "^1.2.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.2",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.5",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
